added sources to reportsByParam endpoint
